--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -23,18 +23,25 @@
             android:background="?android:attr/windowBackground">
 
             <TextView
-                android:id="@+id/back"
+                android:id="@+id/save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Back"
+                android:text="Save"
                 android:textSize="20dp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Profile"
-                android:textSize="20dp"
+                android:text="Edit Profile"
+                android:textSize="25dp"
                 android:textStyle="bold"
-                android:layout_gravity="center"/>
+                android:layout_marginLeft="100dp"/>
+            <TextView
+                android:id="@+id/close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back"
+                android:textSize="20dp"
+                android:layout_marginLeft="90dp" />
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
@@ -45,16 +52,26 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-    </LinearLayout>
+        <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_width="2dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            android:id="@+id/pro_pic"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/profile_pic"
+            />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/pro_pic"
-        android:layout_width="157dp"
-        android:layout_height="157dp"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:src="@drawable/profile_pic"
-        app:civ_border_width="2dp" />
+        <TextView
+            android:id="@+id/cngPic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Đổi ảnh đại diện"
+            android:textSize="18sp" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -79,13 +96,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_name"
+            <EditText
+                android:id="@+id/et_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_marginLeft="25dp"
-                android:textSize="26dp" />
+                android:hint=""
+                android:textSize="30dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -104,13 +120,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_email"
+            <EditText
+                android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_marginLeft="25dp"
-                android:textSize="26dp" />
+                android:hint=""
+                android:textSize="30dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -130,62 +145,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_phone_number"
+            <EditText
+                android:id="@+id/et_phone_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:layout_marginLeft="25dp"
-                android:textSize="26dp" />
+                android:hint=""
+                android:inputType="number"
+                android:textSize="30dp" />
         </LinearLayout>
 
     </LinearLayout>
-
-    <LinearLayout
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tv_post_history"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lịch sử bài đăng"
-            android:textColor="#000000"
-            android:layout_marginTop="20dp"
-            android:textAlignment="center"
-            android:textSize="26sp"/>
-
-        <TextView
-            android:id="@+id/tv_edit_profile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Sửa tài khoản"
-            android:textColor="#000000"
-            android:layout_marginTop="20dp"
-            android:textAlignment="center"
-            android:textSize="26sp"/>
-
-        <TextView
-            android:id="@+id/tv_change_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Đổi mật khẩu"
-            android:textColor="#000000"
-            android:layout_marginTop="20dp"
-            android:textAlignment="center"
-            android:textSize="26sp"/>
-
-        <TextView
-            android:id="@+id/tv_delete_profile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Xóa tài khoản"
-            android:textColor="#ff0000"
-            android:layout_marginTop="20dp"
-            android:textAlignment="center"
-            android:textSize="26sp"/>
-
-    </LinearLayout>
+        android:visibility="gone"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </LinearLayout>
